# nebari-jupyter-ai

./: Dockerfile  LICENSE  README.md  pyproject.toml
jupyter-config/server-config/: nebari_jupyter_ai.json
nebari_jupyter_ai/: __init__.py  _static_handler.py  handlers.py  persona.py  provider.py
nebari_jupyter_ai/tests/: __init__.py
