[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0"]
build-backend = "hatchling.build"

[project]
name = "nebari_jupyter_ai"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "A Jupyter AI extension."
authors = [
    { name = "Quansight" },
]
dependencies = ["jupyter_ai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
test-provider = "nebari_jupyter_ai.provider:TestProvider"

[project.entry-points."jupyter_ai.chat_handlers"]
test-slash-command = "nebari_jupyter_ai.slash_command:TestSlashCommand"

[project.entry-points."jupyter_server_extensions"]
nebari_jupyter_ai = "nebari_jupyter_ai:_jupyter_server_extension_points"

[tool.hatch.build.hooks.version]
path = "nebari_jupyter_ai/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
